--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Index Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    </body>
+</html>
+<header>
+    <h1>My Index Page</h1>
+</header>
+<nav>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</nav>
+<main>
+    <section>
+        <h2>About Me</h2>
+        <p>I'm Syed Mohammad Hussaini, a student in Illinois institute of technology and science I'm passionate about Computers </p>
+        <img src="your-image.jpg" alt="Your Image">
+    </section>
+    </main>
+
+    <footer>
+    <p>&copy; 2023 Your Name</p>
+</footer>
