--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600&display=swap">
   
   <!-- External CSS -->
-  <link rel="stylesheet" href="styleS.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Navbar -->
